[package]
name = "bitaccess"
version = "0.1.0"
authors = ["Łukasz Biel <lukasz.p.biel@gmail.com>"]
description = "Bitfield access macro and utils"
keywords = ["macros", "no_std", "embedded"]
categories = ["data_structures"]
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "../README"

[dependencies]
bitaccess_macros = { path = "../bitaccess_macros", version = "*" }
