[package]
name = "bitaccess"
version = "0.3.0"
authors = ["Łukasz Biel <lukasz.p.biel@gmail.com>"]
description = "Macro for efficient and type-checked access to individual bits of a variable"
keywords = ["macros", "no_std", "embedded"]
categories = ["data-structures"]
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "../README.md"
repository = "https://github.com/luke-biel/bitaccess"

[dependencies]
bitaccess_macros = { path = "../bitaccess_macros", version = "0.3.0" }
