[package]
name = "bitaccess_macros"
version = "0.0.0"
authors = ["Łukasz Biel <lukasz.p.biel@gmail.com>"]
description = "A `cargo generate` template for quick-starting a procedural macro crate"
keywords = ["template", "proc_macro", "procmacro"]
edition = "2021"

[lib]
proc-macro = true

[dependencies]
quote = "1"
proc-macro2 = "1.0"
syn = { version = "1.0", features = ["full", "extra-traits"] }
proc-macro-error = "1.0.4"
convert_case = "0.4.0"
