[package]
name = "bitaccess_macros"
version = "0.1.0"
authors = ["Łukasz Biel <lukasz.p.biel@gmail.com>"]
description = "Bitfield accessor macro intestines"
keywords = ["proc_macro", "procmacro"]
edition = "2021"

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
proc-macro2 = "1.0"
syn = { version = "1.0", features = ["full", "extra-traits"] }
proc-macro-error = "1.0"
convert_case = "0.4"
