[package]
name = "bitaccess_macros"
version = "0.2.0"
authors = ["Łukasz Biel <lukasz.p.biel@gmail.com>"]
description = "Bitfield accessor macro intestines"
keywords = ["macros"]
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "../README.md"

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
proc-macro2 = "1.0"
syn = { version = "1.0", features = ["full", "extra-traits"] }
proc-macro-error = "1.0"
convert_case = "0.4"
